--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
         </div>
 
         <div class="language-sections">
-            <div class="language-card">
+            <a href="jianli.html" class="language-card" style="text-decoration: none; color: inherit;">
                 <div class="language-name">简体中文</div>
                 <div class="greeting">你好，欢迎来到我的个人主页</div>
-            </div>
+            </a>
 
             <div class="language-card">
                 <div class="language-name">繁體中文</div>
