--- a/jianli.html
+++ b/jianli.html
@@ -348,7 +348,7 @@
             <div class="profile">
                 <!-- 新增：头像区域 -->
                 <div class="avatar-wrapper">
-                    <img src="your-avatar.jpg" alt="个人头像" class="avatar">
+                    <img src="tp.png" alt="个人头像" class="avatar">
                 </div>
                 <h1>张三</h1>
                 <p class="job-title">前端开发工程师</p>
@@ -367,7 +367,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-github"></i>
-                    <a href="https://github.com/zhangsan" target="_blank">github.com/zhangsan</a>
+                    <a href="https://github.com/zhangsan" target="_blank">zhangsan.github.io</a>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-map-marker-alt"></i>
