--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
                 <div class="greeting">你好，欢迎来到我的个人主页</div>
             </a>
 
-            <div class="language-card">
+            <a href="3tu.html" class="language-card" style="text-decoration: none; color: inherit;">
                 <div class="language-name">繁體中文</div>
                 <div class="greeting">你好，歡迎來到我的個人主頁</div>
-            </div>
+            </a>
 
             <div class="language-card">
                 <div class="language-name">English</div>
