--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                 <div class="greeting">你好，歡迎來到我的個人主頁</div>
             </a>
 
-            <div class="language-card">
+            <a href="mystudio.html" class="language-card" style="text-decoration: none; color: inherit;">
                 <div class="language-name">English</div>
                 <div class="greeting">Hello, welcome to my personal homepage</div>
-            </div>
+            </a>
 
             <div class="language-card">
                 <div class="language-name">日本語</div>
