--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                 <div class="greeting">Hello, welcome to my personal homepage</div>
             </a>
 
-            <div class="language-card">
+             <a href="logo.html" class="language-card" style="text-decoration: none; color: inherit;">
                 <div class="language-name">日本語</div>
                 <div class="greeting">こんにちは、私のホームページへようこそ</div>
-            </div>
+            </a>
 
             <div class="language-card">
                 <div class="language-name">한국어</div>
