--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
                 <div class="greeting">Hello, welcome to my personal homepage</div>
             </a>
 
-             <a href="logo.html" class="language-card" style="text-decoration: none; color: inherit;">
+            <a href="logo.html" class="language-card" style="text-decoration: none; color: inherit;">
                 <div class="language-name">日本語</div>
                 <div class="greeting">こんにちは、私のホームページへようこそ</div>
             </a>
 
-            <div class="language-card">
+            <a href="cs.html" class="language-card" style="text-decoration: none; color: inherit;">
                 <div class="language-name">한국어</div>
                 <div class="greeting">안녕하세요, 제 개인 홈페이지에 오신 것을 환영합니다</div>
-            </div>
+            </a>
         </div>
 
         <div class="footer">
